testsuites/LLT/compiler/Diagnose/lex_test/lex_expected_left_bracket/case13.expect.out
error: expected '{' in unicode escape, found ' '
  ==> case13.cj:16:3:
   | 
16 | \u cangjie2 ${ "\u"
   | ~~^ expected '{'
   | |
   | because it is in this Unicode escape
   | 

1 error generated, 1 error printed.
